# cpp_masters

1/: 1.md
2/: 2.md  2_2.cpp
3/: 3.md  CMakeLists.txt
3/include/matrix/: matrix.hpp
3/include/nth_power/: nth_power.hpp
3/src/: main.cpp
3/test/: test_square_matrix.cpp
4/: 4.md
